Fix the spacing for anchor links

--- a/sass/pages/articles.scss
+++ b/sass/pages/articles.scss
@@ -36,7 +36,7 @@ to accomodate the fixed page header
 a.anchor {
     display: block;
     position: relative;
-    top: -170px; // TODO: change for different breakpoints
+    top: -230px; // TODO: change for different breakpoints
     visibility: hidden;
 }
 
